[package]
name = "web_crawler"
version = "0.0.1"
authors = ["Alex Newman <posix4e@gmail.com>"]

[dependencies]
time = "0.1.12"
env_logger = "0.3.0"
regex_macros = "0.1.8"
regex = "0.1.8"

[dependencies.threadpool]
git = "https://github.com/rust-lang/threadpool"
[dependencies.hyperhyper]
git = "http://github.com/posix4e/micro-hyper"
[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies.eventual]
git = "https://github.com/carllerche/eventual"
